# liststar-plus

./: .gitignore  LICENSE  README.md  README_zh.md  RELEASE_GUIDE.md  package-lock.json  package.json  run_log.txt  功能清单-ui.md
.gemini/: feature_list.json
.gemini/plans/: 2026-03-12-listory-plus-ui-redesign-design.md  2026-03-12-listory-plus-ui-redesign-impl-plan.md  2026-03-12-listory-plus-v2-impl-plan.md  2026-03-12-listory-plus-v2-packaging-design.md  2026-03-12-listory-plus-v2-packaging-impl-plan.md  2026-03-12-listory-plus-v2-readme-design.md  2026-03-12-listory-plus-v2-readme-impl-plan.md  archive
.gemini/skills/ui-ux-pro-max/: SKILL.md
.gemini/state/: active-session.md
.gemini/state/archive/: 2026-03-12-listory-plus-ui-redesign.md  2026-03-12-listory-plus-v2.md
.github/workflows/: release.yml
legacy/qt_gui/: CMakeLists.txt  run.bat  功能清单-ui.md
legacy/qt_gui/qml/: main.qml
legacy/qt_gui/src/ipc/: pipe_client.cpp  pipe_client.h
legacy/searchd/: PROGRESS.md  build.rs  test_ipc_full.py
legacy/searchd/src/index/: memory.rs  mod.rs
legacy/searchd/src/ipc/: handler.rs
legacy/searchd/src/model/: file_entry.rs  file_entry_v2.rs
proto/: search.proto
qt_gui/: BUILD.md  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  build_msvc.bat  configure.bat  功能清单-ui.md
qt_gui/proto/: search.proto
qt_gui/qml/: main.qml
qt_gui/src/: main.cpp  search_backend.cpp  search_backend.h
qt_gui/src/ipc/: ipc_codec.h  pipe_client.cpp
qt_gui/src/model/: search_result.h
scripts/: generate-keys.ps1  init.ps1  init.sh
searchd/: CLAUDE.md  Cargo.toml  MIGRATION_PLAN.md  USN_MONITORING.md  test_client.py  test_ipc_full.py  功能清单.md
searchd/src/: main.rs
searchd/src/index/: memory.rs  mft.rs  usn.rs
searchd/src/ipc/: handler.rs  mod.rs  pipe_server.rs  protocol.rs
searchd/src/model/: file_entry.rs
searchd/src/search/: content.rs  filename.rs  mod.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: legacy_main.rs  lib.rs  main.rs
src-tauri/src/index/: mft.rs  mod.rs  usn.rs
src-tauri/src/model/: file_entry.rs  memory_index.rs  mod.rs
src-tauri/src/search/: content.rs  filename.rs
